PROJECT(THUMBTEST)

add_definitions("-Wall -g")

SET(PUBLIC_INCLUDE_PATH  
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/../include
   )

SET(PUBLIC_LIBS_PATH
     ${PROJECT_SOURCE_DIR}/../lib
   )


#MESSAGE(STATUS “include dir" ${PUBLIC_INCLUDE_PATH})
#MESSAGE(STATUS "lib dir" ${PUBLIC_LIBS_PATH})

ADD_SUBDIRECTORY(src)